Fix edge issues on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -33,7 +33,7 @@ body {
 .container {
   margin: 0 auto;
   max-width: 740px;
-  padding: 0 10px;
+  padding: 0 1.5rem;
   width: 100%;
 }
 
